--- a/WebApiPatrimonio/appsettings.json
+++ b/WebApiPatrimonio/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Conexion": "Server=187.157.104.218,5062;Database=bdInventario;User Id=residencia;Password=Res1denciaPat.!;TrustServerCertificate=True;Encrypt=False"
+  }
+
 }
