Modifica la conexión a tu base poniendo el nombre de tu usuario

--- a/WebApiPatrimonio/appsettings.json
+++ b/WebApiPatrimonio/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Conexion": "Server=187.157.104.218,5062;Database=bdInventario;User Id=residencia;Password=Res1denciaPat.!;TrustServerCertificate=True;Encrypt=False"
+    "Conexion": "Server=JAIRO\\SQLEXPRESS;Database=bdInventario;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
   }
 
 }
