--- a/WebApiPatrimonio/appsettings.json
+++ b/WebApiPatrimonio/appsettings.json
@@ -8,6 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Conexion": "Server=JAIRO\\SQLEXPRESS;Database=bdInventario;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
-  }
+  },
 
+   "Jwt": {
+     "Key": "ClaveSuperSegura_123456789101112",
+     "Issuer": "https://localhost:44300",
+     "Audience": "https://localhost:44300"
+    }
 }
