Generación de qr

--- a/WebApiPatrimonio/appsettings.json
+++ b/WebApiPatrimonio/appsettings.json
@@ -7,13 +7,18 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Conexion": "Server=DESKTOP-8HN2LR9;Database=bdInventario;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+    "Conexion": "Server=JAIRO\\SQLEXPRESS;Database=bdInventario;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
   },
 
   "Jwt": {
     "Key": "ClaveSuperSegura_123456789101112",
     "Issuer": "https://localhost:44300",
     "Audience": "https://localhost:44300"
-  }
+  },
 
+  "Environment": {
+    "AspNetCore": {
+      "Environment": "Development"
+    }
+  }
 }
