Se agrega lo de programar los levantamientos y correcciones en lo relacionado a las tablas de regiones y transferencias

--- a/WebApiPatrimonio/appsettings.json
+++ b/WebApiPatrimonio/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Conexion": "Server=DESKTOP-8HN2LR9;Database=bdInventario;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+    "Conexion": "Server=JAIRO\\SQLEXPRESS;Database=bdInventario;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
   },
 
   "Jwt": {
